Fix container width on small screen

--- a/src/styles/container.css
+++ b/src/styles/container.css
@@ -1,14 +1,9 @@
 .container {
+  width: 100%;
   margin: 0 auto;
   max-width: var(--container-width);
   flex-grow: 1;
   display: flex;
-}
-
-@media only screen and (min-width: 1200px) {
-  .container {
-    width: var(--container-width);
-  }
 }
 
 .container-shadow:not(.dark) {
